--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guía del Estudiante - Inicio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="index.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
-<body class="d-flex flex-column min-vh-100">
+<header class="text-white text-center py-5">
+    <div class="container">
+      <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
+      <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
+    </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
@@ -23,9 +27,11 @@
       </div>
     </nav>
     </div>
-
+</header>
+<body class="d-flex flex-column min-vh-100">
   <main class="container my-5">
     <article class="bg-white shadow rounded p-4">
+
       <section class="mb-5">
         <h2>¿Qué es la Programación Web?</h2>
         <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que funcionan en navegadores. Incluye el diseño visual, la estructura del contenido, la interacción con el usuario y la conexión con servidores.</p>
@@ -71,7 +77,7 @@
 
       
     </article>
-  <main>
+    
   <section class="mb-5">
     <h3>¿Cómo utilizar esta guía?</h3>
     <ul class="list-group list-group-flush">
@@ -82,24 +88,16 @@
     </ul>
   </section>
 
-  <seccion>
+  <section>
     <h3>Requisitos</h3>
     <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
   </section>
 
-  <header class="text-white text-center py-5">
-    <div class="container">
-      <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
-      <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
-    </div>
-  </headr>
-
   <footer class="bg-light text-center py-3 mt-auto">
     <div class="container">
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
-      <footer>
-   </div>
-
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
