correccion de la pagina evaluacion.html, se enlazaron correctamente las paginas html

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
       </div>
     </div>
   </nav>
-
 </header>
+
 <body class="d-flex flex-column min-vh-100">
   <main class="container my-5">
     <article class="bg-white shadow rounded p-4">
 
       <section class="mb-5">
-        <h2>¿Qué es la Programación Web?</h2>
-        <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que funcionan en navegadores. Incluye el diseño visual, la estructura del contenido, la interacción con el usuario y la conexión con servidores.</p>
+        <div>
+          <h2>¿Qué es la Programación Web?</h2>
+          <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que funcionan en navegadores. Incluye el diseño visual, la estructura del contenido, la interacción con el usuario y la conexión con servidores.</p>
+        </div>
       </section>
 
       <section class="mb-5">
@@ -93,7 +95,7 @@
     <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
   </section>
 
-  <footer class="bg-light text-center py-3 mt-auto">
+  <footer class="bg-light text-center py-3">
     <div class="container">
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
     </div>
