--- a/evaluacion.html
+++ b/evaluacion.html
@@ -53,7 +53,7 @@
     </article>
   </main>
 
-  <footer class="bg-light text-center py-3 mt-auto">
+  <footer>
     <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
 
