--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
-<header class="text-white text-center py-5">
+
+<body class="d-flex flex-column min-vh-100">
+  <header class="text-white text-center py-5">
     <div class="container">
       <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
       <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
     </div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+      <navbar class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,10 +28,9 @@
         </ul>
       </div>
     </div>
-  </nav>
-</header>
+  </navbar>
+    </header>
 
-<body class="d-flex flex-column min-vh-100">
   <main class="container my-5">
     <article class="bg-white shadow rounded p-4">
 
@@ -81,7 +82,7 @@
     </article>
     
   <section class="mb-5">
-    <h3>¿Cómo utilizar esta guía?</h3>
+    <h3 class="color-title">¿Cómo utilizar esta guía?</h3>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Explorá el <strong>temario</strong> para conocer los temas principales.</li>
       <li class="list-group-item">Practicá con ejemplos y desafíos cortos.</li>
@@ -95,10 +96,10 @@
     <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
   </section>
 
-  <footer class="bg-light text-center py-3">
-    <div class="container">
+  </main>
+
+  <footer>
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
-    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
