--- a/temario.html
+++ b/temario.html
@@ -90,13 +90,15 @@
       </div>
 
       <section class="text-center mb-5">
-        <a href="evaluasion.html" class="btn btn-success mt-4">Ir a la Evaluación</a>
+        <a href="evaluacion.html" class="btn btn-success mt-4">Ir a la Evaluación</a>
       </article>
     </section>
   </main>
 
-  <footer class="bg-light text-center py-3">
-    <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
+  <footer>
+    <div>
+      <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
