--- a/evaluacion.html
+++ b/evaluacion.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/evaluacion.css">
 </head>
+<!-- separacion del head con el body -->
 <body>
     <header class="text-white text-center py-5">
     <div class="container">
@@ -23,15 +24,16 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="temario.html">Temario</a></li>
-          <li class="nav-item"><a class="nav-link active" href="evaluacion .html">Evaluación</a></li>
+          <li class="nav-item"><a class="nav-link active" href="evaluacion.html">Evaluación</a></li>
         </ul>
       </div>
     </div>
   </navbar>
     </header>
-
+<!-- separacion del header con el main -->
   <main class="container my-5">
       <article class="bg-white shadow rounded p-4">
+<!-- formulario -->
       <h2>Formulario de Evaluación</h2>
       <forms>
         <div class="mb-4">
@@ -52,7 +54,7 @@
       </forms>
     </article>
   </main>
-
+<!-- separacion del main con el footer -->
   <footer>
     <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
