--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
-
+<!-- division entre el cuerpo y el head -->
 <body class="d-flex flex-column min-vh-100">
   <header class="text-white text-center py-5">
     <div class="container">
@@ -30,17 +30,17 @@
     </div>
   </navbar>
     </header>
-
+<!-- separacion entre el header y el main -->
   <main class="container my-5">
     <article class="bg-white shadow rounded p-4">
-
+<!-- primera viñeta -->
       <section class="mb-5">
         <div>
           <h2>¿Qué es la Programación Web?</h2>
           <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que funcionan en navegadores. Incluye el diseño visual, la estructura del contenido, la interacción con el usuario y la conexión con servidores.</p>
         </div>
       </section>
-
+<!-- segunda viñeta -->
       <section class="mb-5">
         <h3>¿Qué aprenderás en esta guía?</h3>
         <div class="row text-center">
@@ -80,7 +80,7 @@
       </section>
     
     </article>
-    
+<!-- tercer viñeta -->
   <section class="mb-5">
     <h3 class="color-title">¿Cómo utilizar esta guía?</h3>
     <ul class="list-group list-group-flush">
@@ -90,14 +90,14 @@
       <li class="list-group-item">Consultá recursos externos recomendados.</li>
     </ul>
   </section>
-
+<!-- cuarta viñeta -->
   <section>
-    <h3>Requisitos</h3>
+    <h3 id="color-title1">Requisitos</h3>
     <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
   </section>
 
   </main>
-
+<!-- separacion entre el main y el footer -->
   <footer>
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
