--- a/temario.html
+++ b/temario.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
 </head>
-
+<!-- separacion del head y el body -->
 <body class="d-flex flex-column min-vh-100">
   <header class="text-white text-center py-5">
     <div class="container">
@@ -31,10 +31,10 @@
     </div>
   </navbar>
     </header>
-
+<!-- separacion del header y el main -->
   <main class="cotainer my-5">
     <article class="bg-white shadow rounded p-4">
-      
+<!-- estructura de contenido despleglable -->
       <section class="mb-5">
         <h2>Contenido de la Guía</h2>
         <div class="accordion mb-5" id="temarioAccordion">
@@ -88,13 +88,13 @@
           </div>
         </section>
       </div>
-
+<!-- enlace a evaluacion.html -->
       <section class="text-center mb-5">
         <a href="evaluacion.html" class="btn btn-success mt-4">Ir a la Evaluación</a>
       </article>
     </section>
   </main>
-
+<!-- separacion del main con el footer -->
   <footer>
     <div>
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
