correccion final del nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
       <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
     </div>
-      <navbar class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+      <navbar class="navbar-nav navbar-brand bg-dark navbar-dark mb-5">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
