la etiqueta navbar no existe, le corresponde nav

--- a/evaluacion.html
+++ b/evaluacion.html
@@ -14,7 +14,7 @@
       <h1 class="display-5">Evaluación de conocimientos</h1>
       <p class="lead">Comprobá lo que aprendiste hasta ahora respondiendo estas preguntas.</p>
     </div>
-      <navbar class="navbar-nav navbar-brand navbar-dark bg-dark mb-5">
+      <nav class="navbar-nav navbar-brand navbar-dark bg-dark mb-5">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -28,7 +28,7 @@
         </ul>
       </div>
     </div>
-  </navbar>
+  </nav>
     </header>
 <!-- separacion del header con el main -->
   <main class="container my-5">
