--- a/temario.html
+++ b/temario.html
@@ -15,7 +15,7 @@
       <h1 class="display-5">Temario del Curso</h1>
       <p class="lead">Explorá los temas fundamentales para convertirte en desarrollador web</p>
     </div>
-      <navbar class="navbar-nav navbar-brand navbar-dark bg-dark mb-5">
+      <nav class="navbar-nav navbar-brand navbar-dark bg-dark mb-5">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -29,7 +29,7 @@
         </ul>
       </div>
     </div>
-  </navbar>
+  </nav>
     </header>
 <!-- separacion del header y el main -->
   <main class="cotainer my-5">
