correccion del footer junto problemas de etiquetado

--- a/evaluacion.html
+++ b/evaluacion.html
@@ -31,7 +31,7 @@
   </nav>
     </header>
 <!-- separacion del header con el main -->
-  <main class="container my-5">
+  <main class="d-flex flex-column container my-5">
       <article class="bg-white shadow rounded p-4">
 <!-- formulario -->
       <h2>Formulario de Evaluación</h2>
@@ -55,9 +55,12 @@
     </article>
   </main>
 <!-- separacion del main con el footer -->
-  <footer>
-    <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
+  <footer class="bg-dark text-white text-center py-3 mt-auto">
+    <div>
+      <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
+    </div>
   </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
