--- a/temario.html
+++ b/temario.html
@@ -32,8 +32,8 @@
   </nav>
     </header>
 <!-- separacion del header y el main -->
-  <main class="cotainer my-5">
-    <article class="bg-white shadow rounded p-4">
+  <main class="container my-5">
+  <article class="bg-white shadow rounded p-4">
 <!-- estructura de contenido despleglable -->
       <section class="mb-5">
         <h2>Contenido de la Guía</h2>
@@ -86,20 +86,21 @@
               </p>
             </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
+  </article>
 <!-- enlace a evaluacion.html -->
       <section class="text-center mb-5">
         <a href="evaluacion.html" class="btn btn-success mt-4">Ir a la Evaluación</a>
-      </article>
-    </section>
+      </section>
   </main>
 <!-- separacion del main con el footer -->
-  <footer>
+  <footer class="bg-dark text-white text-center py-3 mt-auto">
     <div>
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
