correccion de colores respecto al header y al main

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 
   </main>
 <!-- separacion entre el main y el footer -->
-  <footer class="bg-dark text-white text-center py-3 mt-auto">
+  <footer class="text-white text-center py-3 mt-auto">
     <div>
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
     </div>
   </footer>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
