--- a/temario.html
+++ b/temario.html
@@ -95,7 +95,7 @@
       </section>
   </main>
 <!-- separacion del main con el footer -->
-  <footer class="bg-dark text-white text-center py-3 mt-auto">
+  <footer class="text-white text-center py-3 mt-auto">
     <div>
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
     </div>
